--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "frequently used tools",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest ."
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/nerjs/nerjs-utils/issues"
   },
-  "homepage": "https://github.com/nerjs/nerjs-utils#readme"
+  "homepage": "https://github.com/nerjs/nerjs-utils#readme",
+  "devDependencies": {
+    "jest": "^24.8.0"
+  }
 }
